Clarity R27.3 Blurry Images on Chromium
This should hopefully make images look sharper on Chrome/Chromium browsers for everyone. I tested on multiple browsers and it seemed to improve or at the very least not degrade the quality on all of them. But, if I get complaints, it can always get reverted. Fixes #62

--- a/Clarity Theme/Theme.css
+++ b/Clarity Theme/Theme.css
@@ -1,6 +1,6 @@
 /*==============================*\
   "Clarity" by Valerio Lyndon
-  R27.2
+  R27.3
 
 | == = == THEME CONTENTS == = == |
 
@@ -55,6 +55,8 @@
 @ Base
 @ iframes
 @ Filter-Menu
+
+! FIXES
 
 \*==============================*/
 
@@ -2393,4 +2395,19 @@ div[style^="width: 300px;"] input {
 div[style^="width: 300px;"] input:hover {
 	background: var(--btn-bg-h);
 	color: var(--btn-text-h);
+}
+
+
+
+
+
+/*==============================*\
+  !FIXES
+\*==============================*/
+
+/* Fixes blurry images on Chrome, which affected some people in May 2022 */
+.status-menu::after,
+.data.image img,
+.data.image a::before {
+    image-rendering: -webkit-optimize-contrast;
 }
