Update message again

--- a/Kure Theme/Kure.css
+++ b/Kure Theme/Kure.css
@@ -1,16 +1,7 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*\
-| Kure (name subject to change)  |
+| Kure                           |
 | by Valerio Lyndon              |
 | Version 0.5.0                  |
-|                                |
-|   This theme is incomplete.    |
-| Functionality is limited and   |
-| the design is not completed.   |
-| I would appreciate you fixing  |
-| issues yourself where possible.|
-| If I have the desire to edit   |
-| this theme, I will do it on    |
-| my own time. Thank you.        |
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 /* IMPORTS */
