--- a/Clarified Theme/Modifications/Banner Character.css
+++ b/Clarified Theme/Modifications/Banner Character.css
@@ -1,17 +1,23 @@
 /**
- * Character in Banner
- * v1.0.0
+ * Banner Character
+ * v1.0.1
  */
 
 .header::after {
 	content: "";
 	position: absolute;
-	pointer-events: none;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	background: url(https://i.imgur.com/JmxfBcB.png) calc(50% + 530px) bottom / auto 90% no-repeat;
+	pointer-events: none;
+}
+
+/* fix for button layering */
+.header-menu,
+.header-title {
+	z-index: 1;
 }
 
 /* END of Character in Banner */
