--- a/Clarified Theme/Clarified.css
+++ b/Clarified Theme/Clarified.css
@@ -2322,6 +2322,14 @@ body[data-query*='"status":6'] {
 
 
 /*=========
+  !USER
+  =========*/
+
+html:root {}
+
+
+
+/*=========
   !MODS
   =========*/
 
