Clarified v2.0.6 Optimise MAL Image
Switch from MAL-Hosted image (13.9kb) to a resized and rehosted version (3.05kb). A 78% size reduction for this image.

--- a/Clarified Theme/Clarified.css
+++ b/Clarified Theme/Clarified.css
@@ -1,6 +1,6 @@
 /**
  * "Clarified" by Valerio Lyndon
- * v2.0.5
+ * v2.0.6
  * 
 ***TABLE*OF*CONTENTS***
  * 
@@ -1944,7 +1944,7 @@ Please MAL I am begging you, just add another selector to the date column header
 	display: block;
 	height: 45px;
 	margin-bottom: 18px;
-	background: url(/images/mal-logo-large.png) center / contain no-repeat;
+	background: url(https://files.catbox.moe/2aocpd.webp) center / contain no-repeat;
 }
 
 #copyright,
